--- a/config/supervisord-phpfpm.conf
+++ b/config/supervisord-phpfpm.conf
@@ -1,6 +1,8 @@
 [program:php-fpm]
 command=php-fpm
+stdout-encoding=utf-8
+autostart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-redirect_stderr=true
-stdout-encoding=utf-8
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
