--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,5 +1,9 @@
 [supervisord]
 nodaemon=true
+loglevel=INFO
+logfile=/dev/null
+logfile_maxbytes=0
+pidfile=/var/run/supervisord.pid
 
 [include]
-files = /etc/supervisor/conf.d/*.conf
+files=/etc/supervisor/conf.d/*.conf
